src/test/groovy/org/fundacionjala/gradle/plugins/enforce/interceptor/resources/objects/ObjectFormula.object
<CustomObject>
    <deleteConstraint>Cascade</deleteConstraint>
    <nameField>
        <label>Object1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>HHId__c</fullName>
        <formula>       if(Account.SYSTEM_AccountType__c==&apos;Household Account&apos;,CASESAFEID(AccountId),CASESAFEID(npo02__Household__c))
        </formula>
  <inlineHelpText>holds the ID  of the current household, whether it is a Household Account, or a Household Object.</inlineHelpText>
        <label>HHId</label>
        <type>    Text      </type>
    </fields>
    <fields>
        <fullName>HHId__c</fullName>
        <formula>      if(Account.SYSTEM_AccountType__c==&apos;Household Account&apos;,CASESAFEID(AccountId),CASESAFEID(npo02__Household__c))</formula>
        <inlineHelpText>holds the ID of the current household, whether it is a Household Account, or a Household Object.</inlineHelpText>
        <label>HHId</label>
        <type>   Text     </type>
    </fields>
    <fields>
        <fullName>HHId__c</fullName>
        <formula>  ddfasfdsfif(Account.SYSTEM_AccountType__c==&apos;Household Account&apos;,CASESAFEID(AccountId),CASESAFEID(npo02__Household__c))
        CASESAFEID(npo02__Household__c)
</formula>
        <inlineHelpText>holds the ID of the current household, whether it is a Household Account, or a Household Object.</inlineHelpText>
        <label>HHId</label>
        <type>   Text       </type>
    </fields>

<fields>
        <fullName>Results__c</fullName>
        <formula>HYPERLINK(&apos;/apex/pros_q2w__PricingWaveCloneResults?id=&apos; + PricingWaveChild__r.Id , &apos;View Results&apos;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Results</label>
        <type>  Text  </type>
    </fields>
<fields>
        <fullName>Results__c</fullName>
        <formula>Reminder Date = CloseDate - 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Results</label>
        <type> Date</type>
    </fields>
<fields>
        <fullName>Results__c</fullName>
        <formula>Next = NOW() + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Results</label>
        <type> DateTime</type>
    </fields>
<fields>
        <fullName>Results__c</fullName>
        <formula>Fahrenheit = 1.8 * Celsius__c + 32</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Results</label>
        <type>Number</type>
    </fields>
<fields>
        <fullName>Results__c</fullName>
        <formula>Gross Margin = Amount - Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Results</label>
        <type>Currency</type>
    </fields>
<fields>
        <fullName>Results__c</fullName>
        <formula>TODAY() > CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Results</label>
        <type>Checkbox</type>
    </fields>
<fields>
        <fullName>Results__c</fullName>
        <formula>Discount = (Amount - Discounted_Amount__c) / Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Results</label>
        <type>Number</type>
    </fields>
 <fields>

        <fullName>CurrencyProposedRevenue__c</fullName>


        <formula>ProposedRevenue__c</formula>

        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>

        <label>CurrencyProposedRevenue</label>

        <precision>18</precision>


        <scale>2</scale>


        <type>Currency</type>

    </fields>

 <fields>

        <fullName>ProposedRevenue__c</fullName>

        <defaultValue>100</defaultValue>


        <label>ProposedRevenue</label>

        <precision>18</precision>


        <scale>2</scale>


        <type>Currency</type>

    </fields>

    <fields>
        <fullName>Unique_Volunteer_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>